- Allow second parameter, modulus (default 2), in ForceEvenStarts entry of RDF [General] section; this is a digit and segment lengths must be 0 modulus this value (Graham)
- Add new processor, TI2541, with interface type JP3.1, ForceEvenStarts modulus defaulting to 4 and learned signal format = 1 (Graham)
- Update digitmaps.bin to 659 (Dave Reed, Graham)

Changes for v2.03
-- Alpha 8 --
- Add support for XSight Lite and ARRX12G, remotes that have a direct USB interface.
- Note that Alphas prior to Alpha 8 were not uploaded to the SVN and were early stages in this development.
- An updated version of jp12serial, not yet publicly released, is needed to access this new support.  
-- Alpha 9 --
- Fix bug in Alpha 8 that caused downloading to hang if no Favorites are set.
-- Alpha 10 --
- Change reading of USB port for XSight remotes to use javahidapi rather than modified jp12serial (3FG)
- Change form of signature for XSight remotes to be "USB" + PID value returned by HID interface (Graham)
- Begin support for XSight Touch, displaying data in General, Device and Raw Data tabs (Graham)
-- Alpha 11 --
- A few minor bugfixes (Graham)
-- Alpha 12 --
- More prototype support for XSight Touch.  Will now display macro data, will upload to the remote but only edits to device data get through to the upload (Graham)
-- Alphas 13-21
- Further development work for XSight Touch.
-- Alpha 22
- Uploads to XSight Touch now delete user files not present in the upload (Graham)
- Fixed issue with editing and cloning macros of non-XSight remotes, caused by the XSight development (Graham)
- Uploading of system files to XSight Touch now shows the Uploading progress bar, as for other uploads (Graham)
- Fixed issues arising when importing upgrades for non-XSight remotes into XSight ones (Graham)
-- Alpha 23
- Make activity data for JP3 remotes be read-only, as updating the E2 data has no effect (Graham)