@@ -19,6 +19,7 @@ Changes for v2.04
 - Add support for new [General+] section in RDF which can supplement [General] section; new Notes field should be put in this section (Graham)
 - Allow second parameter, modulus (default 2), in ForceEvenStarts entry of RDF [General] section; this is a digit and segment lengths must be 0 modulus this value (Graham)
 - Add new processor, TI2541, with interface type JP3.1, ForceEvenStarts modulus defaulting to 4 and learned signal format = 1 (Graham)
+- Add support for activities stored as new segment type 0xE9 (Graham)
 - Update digitmaps.bin to 659 (Dave Reed, Graham)
 
 Changes for v2.03
